# mezmo-logs-mcp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  cursor-mcp-example.json  docker-compose.yml  env.example  memo_api.py  mezmo_api.py  pyproject.toml  requirements.txt  server.py
monitoring/: prometheus.yml
