[project]
name = "mezmo-mcp"
version = "2.0.0"
description = "MCP server for retrieving logs from Mezmo"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.21.0",
    "pydantic>=2.11.0",
]
